auth form styles

--- a/src/app/auth/forgot/forgot.component.html
+++ b/src/app/auth/forgot/forgot.component.html
@@ -3,10 +3,10 @@
        <ion-row>
           <ion-col size-sm="8" offset-sm="2" size-md="6" offset-md="3" size-lg="4" offset-lg="4" class="main-column">
              <ion-card color="none">
-                <ion-card-header color="primary" class="ion-margin ion-text-center">
-                   <img src="assets/images/ctf-logo-white-medium.png">
+                <ion-card-header color="light" class="ion-text-center">
+                   <img src="assets/images/forgot-password.png">
                    <h3>
-                      <ion-text color="light">Vreau altă parolă <strong>frate</strong>...</ion-text>
+                      <ion-text color="primary">Vreau altă parolă <strong>frate</strong>...</ion-text>
                    </h3>
  
                 </ion-card-header>
