--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,10 +3,10 @@
       <ion-row>
          <ion-col size-sm="8" offset-sm="2" size-md="6" offset-md="3" size-lg="4" offset-lg="4" class="main-column">
             <ion-card color="none">
-               <ion-card-header color="primary" class="ion-margin ion-text-center">
-                  <img src="assets/images/ctf-logo-white-medium.png">
+               <ion-card-header color="light" class="ion-text-center">
+                  <img src="assets/images/login-user.png">
                   <h3>
-                     <ion-text color="light">Email si parolă <strong>frate</strong>...</ion-text>
+                     <ion-text color="primary">Email si parolă <strong>frate</strong>...</ion-text>
                   </h3>
 
                </ion-card-header>
@@ -49,14 +49,14 @@
                            <ion-button size="large" type="submit" color="primary" expand="block" [disabled]="!loginForm.valid">AUTENTIFICARE</ion-button>
                         </ion-col>
                      </ion-row>
-                     <ion-row>
+                     <!-- <ion-row>
                         <ion-col>
                            <ion-button size="large" type="submit" color="tertiary" expand="block">
                               <ion-icon color="primary" name="logo-facebook" class="ion-padding"></ion-icon>
                               <ion-text color="primary"> Autentificare cu Facebook</ion-text>
                            </ion-button>
                         </ion-col>
-                     </ion-row>
+                     </ion-row> -->
                      <ion-row>
                         <ion-col class="ion-padding-vertical">
                            <ion-item lines="none" color="none" class="remember-me ion-no-padding ion-float-right">
