--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,13 +21,14 @@
 
 .auth-wrapper {
     background: var(--ion-color-light);
-    height: 100%;
+    min-height: 100%;
+    height:100hv;
 
     ion-grid {
-        display: flex;
-        height: 100%;
-        align-items: center;
+        display:flex;
+        flex-direction: column;
         justify-content: center;
+        padding-top:5%;
 
         ion-row {
             width: 100%;
