--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -17,6 +17,8 @@
         </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
+        <ngx-spinner [fullScreen]="false" bdColor="rgba(249,249,249,0.8)" color="#152460">
+        </ngx-spinner>
         <router-outlet id="admin"></router-outlet>
     </ion-content>
 
